# omak

./: .gitignore  LICENSE  README.md  pip install om.py  pyproject.toml
src/om/: __init__.py  om.py
src/om.egg-info/: PKG-INFO  SOURCES.txt
src/omak.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_imports.py
